# fast2book-backend

./: .dockerignore  .gitignore  Dockerfile  ReadMe.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: cicd.yml  format.yml  pytest.yml
app/: main.py
app/templates/email/: account_create.html  accountapproval.html  activation_code.html  app_link.html  booking_cancel.html  booking_cancel_email_to_vendor.html  booking_confirm.html  booking_notification.html  delete_user.html  forgot_password.html  login_with_otp.html  new_support_request.html  new_ticket.html  new_vendor_query.html  payment_successfully.html  resend_otp.html  support_request.html  support_ticket_reply.html  ticket.html  ticket_reply.html  vendor_create_email.html  vendor_query.html  vendor_query_reply.html  verifyEmailAdress.html  welcome.html
app/v1/config/: __init__.py  auth.py  constants.py  db.py
app/v1/dependencies/: __init__.py  blog_manager.py  booking_manager.py  category_manager.py  costumer_manager.py  notification_manager.py  offer_manager.py  payment_manager.py  permission_manager.py  rating_manager.py  razor_pay.py  services_manager.py  subscription_manager.py  super_user_manager.py  support_manager.py  vendor_manager.py  video_manager.py
app/v1/middleware/: auth.py  response_format.py
app/v1/middleware/exception_handlers/: custom_handlers.py
app/v1/models/: __init__.py  address.py  blog.py  booking.py  category.py  deleted_user.py  email_monitor.py  notification.py  offer.py  payment.py  permission.py  search_query.py  services.py  slots.py  subscription.py  support.py  ticket.py  transactions.py  transfer_amount.py  user.py  user_token.py  vendor.py  vendor_query.py  vendor_rating.py  vendor_service.py  video.py
app/v1/routers/: base_router.py
app/v1/routers/blog/: blog_router.py
app/v1/routers/booking/: booking_router.py
app/v1/routers/category/: category_router.py
app/v1/routers/common/: common_router.py
app/v1/routers/costumer/: costumer_router.py
app/v1/routers/notification/: notification_router.py
app/v1/routers/offer/: offer_router.py
app/v1/routers/payment/: payment_router.py
app/v1/routers/permission/: permission_router.py
app/v1/routers/rating/: rating_router.py
app/v1/routers/razorpay/: razor_pay.py
app/v1/routers/service/: service_router.py
app/v1/routers/subscription/: subscription_router.py
app/v1/routers/superuser/: super_user_router.py
app/v1/schemas/offer/: offer.py
app/v1/services/: __init__.py
app/v1/utils/: celery_config.py  email.py  notification.py  s3.py  token.py
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  service.yaml
scripts/: seed.py
tests/: conftest.py  test_main.py
tests/v1/routers/: test_users.py
(+34 files in other folders)
