[tool.poetry]
name = "fast2book-frontend"
version = "0.1.0"
description = "A multiple service management with Poetry & Devcontainer"
authors = ["Gohashinclude <developer@gohashinclude.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.x"
fastapi = "^0.111.0"
beanie = "^1.28.0"
motor = "^3.6.0"
bcrypt = "^4.2.1"
python-dotenv = "^1.0.1"
fastapi-mail = "^1.4.2"
authlib = "^1.3.2"
jwt = "^1.3.1"
pyjwt = "^2.10.1"
zon = "^2.0.1"
slugify = "^0.0.1"
python-slugify = "^8.0.4"
pillow = "^11.0.0"
botocore = "^1.35.94"
boto3 = "^1.35.94"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.10.1"
flake8 = "^7.1.0"
autoflake = "^2.3.1"
wemake-python-styleguide = "^0.19.2"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
src_paths = ["app", "tests"]
lines_between_types = 1
lines_after_imports = 2

[tool.mypy]
strict = true
pretty = true

[tool.pytest.ini_options]
addopts = "--cov=app --cov-branch --cov-report=term --cov-report=html --cov-fail-under=100"
